--- a/modules/amf/amf-api/build.gradle
+++ b/modules/amf/amf-api/build.gradle
@@ -1,3 +1,8 @@
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
 }
+apply plugin: "com.liferay.plugin"
+
+liferay {
+	deployDir = file("/home/me/dev/projects/bundles/master/deploy")
+}
