wip- update service.xml

--- a/modules/amf/amf-service/src/main/resources/service.properties
+++ b/modules/amf/amf-service/src/main/resources/service.properties
@@ -12,6 +12,6 @@
 ## Build
 ##
 
-    build.namespace=AmfRegistration
-    build.number=3
-    build.date=1638196503334
+    build.namespace=Registration
+    build.number=4
+    build.date=1638206306713
