--- a/modules/amf-web/src/main/resources/content/Language.properties
+++ b/modules/amf-web/src/main/resources/content/Language.properties
@@ -1,2 +1,6 @@
+javax.portlet.description.com_liferay_amf_web_RegistrationPortlet=Registration
+javax.portlet.display-name.com_liferay_amf_web_RegistrationPortlet=Registration
+javax.portlet.keywords.com_liferay_amf_web_RegistrationPortlet=Registration
+javax.portlet.short-title.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.title.com_liferay_amf_web_RegistrationPortlet=Registration
 registration.caption=Acme Movie Fanatics.
