--- a/modules/amf/amf-api/build.gradle
+++ b/modules/amf/amf-api/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
+    compileOnly 'com.liferay.portal:release.dxp.api'
 }
 apply plugin: "com.liferay.plugin"
 
