--- a/modules/amf-web/build.gradle
+++ b/modules/amf-web/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 	compileOnly project(":modules:amf:amf-api")
 
 	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
+    compileOnly 'com.liferay.portal:com.liferay.portal.kernel'
+    compileOnly 'com.liferay.portal:com.liferay.portal.kernel'
 }
 apply plugin: "com.liferay.plugin"
 
