--- a/modules/amf-web/src/main/resources/content/Language.properties
+++ b/modules/amf-web/src/main/resources/content/Language.properties
@@ -1,3 +1,5 @@
+add-registration =Registration was successfully added.
+email-address-validation=Fill out the email address correctly.
 javax.portlet.description.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.display-name.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.keywords.com_liferay_amf_web_RegistrationPortlet=Registration
