--- a/modules/amf-web/build.gradle
+++ b/modules/amf-web/build.gradle
@@ -1,10 +1,8 @@
 dependencies {
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
-
 	compileOnly group: 'com.liferay', name: 'com.liferay.frontend.taglib.clay'
-
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.function'
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib"
 	compileOnly group: "javax.portlet", name: "portlet-api"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api"
@@ -14,6 +12,7 @@ dependencies {
 	compileOnly project(":modules:amf:amf-api")
 
 	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
+	compileOnly 'com.liferay.portal:release.dxp.api'
 }
 
 liferay {
