--- a/modules/amf-web/src/main/resources/content/Language.properties
+++ b/modules/amf-web/src/main/resources/content/Language.properties
@@ -5,4 +5,5 @@ javax.portlet.display-name.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.keywords.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.short-title.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.title.com_liferay_amf_web_RegistrationPortlet=Registration
-registration.caption=Acme Movie Fanatics.
+login.capition=Login AMF.
+registration.caption=Registration AMF.
