--- a/modules/amf-web/build.gradle
+++ b/modules/amf-web/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 
 	compileOnly project(":modules:amf:amf-api")
+	compileOnly project(":modules:amf:amf-service")
 
 	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
 	compileOnly 'com.liferay.portal:release.dxp.api'
