--- a/modules/amf-web/src/main/resources/content/Language.properties
+++ b/modules/amf-web/src/main/resources/content/Language.properties
@@ -1,9 +1,11 @@
 add-registration =Registration was successfully added.
+billing-info=Billing Data
 email-address-validation=Fill out the email address correctly.
 javax.portlet.description.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.display-name.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.keywords.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.short-title.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.title.com_liferay_amf_web_RegistrationPortlet=Registration
-login.capition=Login AMF.
-registration.caption=Registration AMF.
+login.capition=Login
+personal-info=Personal Data
+registration.caption=Acme Movie Fanatics Registration
