Add new key to Language.propertie

--- a/modules/amf-web/src/main/resources/content/Language.properties
+++ b/modules/amf-web/src/main/resources/content/Language.properties
@@ -6,6 +6,8 @@ javax.portlet.display-name.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.keywords.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.short-title.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.title.com_liferay_amf_web_RegistrationPortlet=Registration
+login-entry=Welcome to Acme Movie Fanatics
+login-validation=Email Address or password wrong.
 login.capition=Login
 personal-info=Personal Data
 registration.caption=Acme Movie Fanatics Registration
