--- a/modules/registration-jaxrs/build.gradle
+++ b/modules/registration-jaxrs/build.gradle
@@ -3,4 +3,10 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs"
     compileOnly 'com.liferay.portal:release.dxp.api'
+
+	compileOnly project(":modules:amf:amf-api")
+}
+
+liferay {
+	deployDir = file("/home/me/dev/bundles/master/deploy/")
 }
