--- a/modules/registration-jaxrs/build.gradle
+++ b/modules/registration-jaxrs/build.gradle
@@ -2,6 +2,7 @@ dependencies {
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs"
+	compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compileOnly 'com.liferay.portal:release.dxp.api'
 
 	compileOnly project(":modules:amf:amf-api")
