Add language key to Language.properties

--- a/modules/amf-web/src/main/resources/content/Language.properties
+++ b/modules/amf-web/src/main/resources/content/Language.properties
@@ -8,6 +8,6 @@ javax.portlet.short-title.com_liferay_amf_web_RegistrationPortlet=Registration
 javax.portlet.title.com_liferay_amf_web_RegistrationPortlet=Registration
 login-entry=Welcome to Acme Movie Fanatics
 login-validation=Email Address or password wrong.
-login.capition=Login
+login.capition=Login Acme Movie Fanatics
 personal-info=Personal Data
 registration.caption=Acme Movie Fanatics Registration
